--- a/index.html
+++ b/index.html
@@ -1,13 +1,214 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <title>Panda Commerce Bootstrap</title>
-</head>
-<body>
-    
-</body>
-</html>
+    </head>
+    <body>
+    <!-- Header start -->
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Backpack</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Subscribe</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                </div>
+            </div>
+            </nav>
+            <!-- Slider - made with carousel -->
+            <div id="carouselExampleControls" class="carousel slide my-3" data-bs-ride="carousel">
+                <div class="carousel-inner rounded-2">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center p-4" style="background-color: #FEEAE9;" >
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$420</h1>
+                                <div class="btn btn btn-danger">BUY NOW</div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="row d-flex align-items-center p-4" style="background-color:#FEEAE9;
+                        ">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$420</h1>
+                                <div class="btn btn btn-danger">BUY NOW</div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="row d-flex align-items-center p-4" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$420</h1>
+                                <div class="btn btn btn-danger">BUY NOW</div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                </div>
+    </header>
+    <main>
+        <!-- Categories Section -->
+    <div class="container overflow-hidden">
+        <div class="row gy-5 my-5">
+            <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 rounded-2 d-flex align-items-center justify-content-between" style="background: linear-gradient(152.07deg, #FF9C35 1.47%, #FFD019 97.17%);">
+                <h1 class="text-white">Watch</h1>
+                <img src="./images/categories/watch.png" alt="">
+            </div>
+                </div>
+            <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 rounded-2 d-flex align-items-center justify-content-between" style="background: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);">
+                <h1 class="text-white">Bag</h1>
+                <img src="./images/categories/bag.png" alt="">
+            </div>
+                </div>
+            <div class="col-lg-4 col-md-6 col-12">
+            <div class="p-3 rounded-2 d-flex align-items-center justify-content-between" style="background: linear-gradient(170.41deg, #4289FF -10.89%, #3F07F8 92.77%);">
+                <h1 class="text-white">Shoes</h1>
+                <img src="./images/categories/shoes.png" alt="">
+            </div>
+                </div>
+        </div>
+        </div>
+        <!-- Shoes Section -->
+        <section class="container overflow-hidden mb-3">
+            <h1 class="my-4">Shoes</h1>
+            <div class="row gy-5">
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Reebok Dart Men’s Shoes</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Reebok Pump</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Reebok All Terrain</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- Bags Section -->
+        <section class="container overflow-hidden mb-3">
+            <h1 class="my-4">BackPack</h1>
+            <div class="row gy-5">
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/bags/bag-1.png" width="290" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Ison Backpack</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.  </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/bags/bag-2.png" width="290" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Biaowang Backpack</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class=" card h-100 shadow-sm mb-5 bg-body rounded-3 justify-content-end" style="width: 18rem;">
+                    <img src="./images/bags/bag-3.png" width="290" class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <h4 class="card-title pb-3 fw-bold">Dxyizu WS54 Smart</h4>
+                    <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                    <h2 class="pb-3">$1289</h2>
+                    <a href="#" class="btn btn-primary fw-bold text-white bg-black">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- Stay in touch Section -->
+        <section style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info mb-3">
+            <div class="">
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input placeholder="Your Email" type="text" class="form-control"><br>
+                <button type="submit" class="btn btn-primary mt-2">SUBMIT</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p class="text-center">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    </footer>
+    </body>
+    <script src="./js/bootstrap.js"></script>
+    </html>
